phf_macros_tests/tests/compile-fail-unicase/equivalent-keys.stderr
error: duplicate key
 --> tests/compile-fail-unicase/equivalent-keys.rs:6:5
  |
6 |     UniCase::ascii("foo") => 42, //~ ERROR duplicate key UniCase("FOO")
  |     ^^^^^^^^^^^^^^^^^^^^^
